public-src/css/foundation/_buttons.scss
/**
 * This file is part of the
 * Infeav Data Manager (https://www.infeav.org/data-manager)
 * open source project
 *
 * @copyright   2018-2020 Tobias Krebs and the Infeav Team
 * @license     https://www.gnu.org/licenses/gpl.html GNU General Public License 3
 */

a, button, .btn {
    display: inline-block;

    &:focus {
        outline: dotted 1px currentColor;
    }

    &:active {
        outline: none;
        transform: scale(0.96) translate(0, 0.05em);
    }
}

